[package]
name = "twisp"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["cargo", "derive"] }
env_logger = "0.11.3"
fastwebsockets = { version = "0.7.1", features = ["unstable-split", "upgrade", "simdutf8"] }
futures-util = "0.3.30"
http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
log = "0.4.21"
pty-process = { version = "0.4.0", features = ["async", "tokio"] }
tokio = { version = "1.37.0", features = ["full"] }
wisp-mux = { version = "3.0.0", features = ["fastwebsockets", "tokio_io"] }
