[package]
name = "twisp"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["cargo", "derive"] }
env_logger = "0.11.3"
nix = { version = "0.28.0", features = ["term"] }
fastwebsockets = { version = "0.7.1", features = ["unstable-split", "upgrade", "simdutf8"] }
futures-util = "0.3.30"
http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
libc = "0.2.153"
log = "0.4.21"
pty-process = { version = "0.4.0", features = ["async", "tokio"] }
rustix = "0.38.32"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec", "compat"] }
wisp-mux = { version = "4.0.1", features = ["fastwebsockets"] }
