[package]
name = "twisptest"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
bytes = "1.6.0"
fastwebsockets = { version = "0.8.0", features = ["unstable-split", "upgrade", "simdutf8"] }
futures = "0.3.30"
http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["client", "http1"] }
nix = { version = "0.28.0", features = ["term"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["compat"] }
wisp-mux = "5.0.0"
